alignment fix

--- a/src/features/user/CompleteSignup/CompleteSignup.module.scss
+++ b/src/features/user/CompleteSignup/CompleteSignup.module.scss
@@ -3,12 +3,11 @@
 // entire page
 .signUpPage{
   background-repeat: no-repeat;
-  // background-size: cover;
   min-height: 100vh;
   display:flex;
   align-items:center;
   justify-content: center;
-  padding: 120px 0px;
+  padding: 120px 0px 60px 0px;
 }
 
 // the white form
